tests/errors/unterminated_if.HC
//ERR: unterminated #if
#if 1
"hi\n";
